5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1764_1183.log
== TEST (2019-05-22 10:42:58) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 10:43:31) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		posi = posi + 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 10:43:48) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		posi = posi + 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 10:46:28) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
	posi = posi + 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:11:12) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
vet2 = ones(NPosit)
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:12:11) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
vet2 = ones(NPosit, dtype=int)
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:20:39) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
vet2 = ones(NPosit, dtype=int)
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi2] != 0):
		vet2[posi2] = vet[posi2]
	elif(vet[posi2] == 0):
		vet2[posi2] = vet[posi2+1]
		
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:22:39) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
vet2 = ones(NPosit, dtype=int)
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi2] != 0):
		vet2[posi2] = vet[posi2]
	elif(vet[posi2] == 0):
		vet2[posi2] = vet[posi2+1]
	posi2 = posi2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:23:34) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
vet2 = ones(NPosit, dtype=int)
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi2] != 0):
		vet2[posi2] = vet[posi2]
	elif(vet[posi2] == 0):
		vet2[posi2] = vet[posi2+1]
	posi2 = posi2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:24:50) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
vet2 = ones(NPosit, dtype=int)
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi2] != 0):
		vet2[posi2] = vet[posi2]
	posi2 = posi2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:26:29) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = ones(NPosit, dtype=int)
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi2] != 0):
		vet2[posi2] = vet[posi2]
	posi2 = posi2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:28:07) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = zero(NPosit, dtype=int)
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi2] != 0):
		vet2[posi2] = vet[posi2]
	posi2 = posi2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:28:36) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = zeros(NPosit, dtype=int)
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi2] != 0):
		vet2[posi2] = vet[posi2]
	posi2 = posi2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:32:40) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = zeros(NPosit, dtype=int)
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi2] != 0):
		vet2[posi2] = vet[posi2]
	elif(vet[posi2] == 0):
		vet2[posi2] = vet[posi2 + 1]
	posi2 = posi2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 11:33:40) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = zeros(NPosit, dtype=int)
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi2] != 0):
		vet2[posi2] = vet[posi2]
	elif(vet[posi2] == 0):
		vet2[posi2] = vet[posi2 + 2]
	posi2 = posi2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:55:44) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = zeros(NPosit, dtype=int)
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi2] != 0):
		vet2[posi2] = vet[posi2]
	elif(vet[posi2] == 0):
		vet2[posi2] = vet[posi2 + 1]
		
	posi2 = posi2 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:22:24) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = zeros(NPosit, dtype=int)
posi1 = 0
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi1] != 0):
		vet2[posi2] = vet[posi1]
	elif(vet[posi1] == 0):
		posi1 = posi1 + 1
		vet2[posi2] = vet[posi]
		posi1 = posi1 - 1
	posi2 = posi2 + 1
	posi1 = posi1 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:24:12) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = zeros(NPosit, dtype=int)
posi1 = 0
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi1] != 0):
		vet2[posi2] = vet[posi1]
	elif(vet[posi1] == 0):
		posi1 = posi1 + 1
		vet2[posi2] = vet[posi1]
		posi1 = posi1 - 1
	posi2 = posi2 + 1
	posi1 = posi1 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:28:33) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = zeros(NPosit, dtype=int)
posi1 = 0
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi1] != 0):
		vet2[posi2] = vet[posi1]
	else:
		posi1 = posi1 + 1
		vet2[posi2] = vet[posi1]
		posi1 = posi1 - 1
	posi2 = posi2 + 1
	posi1 = posi1 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:30:23) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = ones(NPosit, dtype=int)
posi1 = 0
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi1] != 0):
		vet2[posi2] = vet[posi1]
	else:
		posi1 = posi1 + 1
		vet2[posi2] = vet[posi1]
		posi1 = posi1 - 1
	posi2 = posi2 + 1
	posi1 = posi1 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:30:58) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = ones(NPosit, dtype=int)
posi1 = 0
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi1] != 0):
		vet2[posi2] = vet[posi1]
	else:
		posi1 = posi1 + 1
		vet2[posi2] = vet[posi1]
		posi1 = posi1 - 1
	posi2 = posi2 + 1
	posi1 = posi1 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:32:40) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = ones(NPosit, dtype=int)
posi1 = 0
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi1] != 0):
		vet2[posi2] = vet[posi1]
	#else:
		#posi1 = posi1 + 1
		#vet2[posi2] = vet[posi1]
		#posi1 = posi1 - 1
	posi2 = posi2 + 1
	posi1 = posi1 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:39:31) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
vet2 = ones(NPosit, dtype=int)
posi1 = 0
posi2 = 0
NPosit = NPosit
while(posi2 < NPosit):
	if(vet[posi1] == 0):
		vet2[posi2] = vet[posi1]
	else:
		posi1 = posi1 + 1
		vet2[posi2] = vet[posi1]
		posi1 = posi1 - 1
	posi2 = posi2 + 1
	posi1 = posi1 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:42:33) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = ones(NPosit, dtype=int)
NPosit = NPosit
while(posi < NPosit):
	if(vet[posi] != 0):
		vet2[posi] = vet[posi]
	elif(vet[]== 0)
		posi1 = posi1 + 1
		vet2[posi2] = vet[posi1]
		posi1 = posi1 - 1
	posi2 = posi2 + 1
	posi1 = posi1 + 1
print(vet2)
-- ERROR:
File "XXXX", line 20
    elif(vet[]== 0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:42:38) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = ones(NPosit, dtype=int)
NPosit = NPosit
while(posi < NPosit):
	if(vet[posi] != 0):
		vet2[posi] = vet[posi]
	elif(vet[]== 0):
		posi1 = posi1 + 1
		vet2[posi2] = vet[posi1]
		posi1 = posi1 - 1
	posi2 = posi2 + 1
	posi1 = posi1 + 1
print(vet2)
-- ERROR:
File "XXXX", line 20
    elif(vet[]== 0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:42:50) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = ones(NPosit, dtype=int)
NPosit = NPosit
while(posi < NPosit):
	if(vet[posi] != 0):
		vet2[posi] = vet[posi]
	elif(vet[posi]== 0):
		posi1 = posi1 + 1
		vet2[posi2] = vet[posi1]
		posi1 = posi1 - 1
	posi2 = posi2 + 1
	posi1 = posi1 + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:43:24) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = ones(NPosit, dtype=int)
NPosit = NPosit
while(posi < NPosit):
	if(vet[posi] != 0):
		vet2[posi] = vet[posi]
	elif(vet[posi]== 0):
		posi = posi + 1
		vet2[posi] = vet[posi]
		posi = posi - 1
	posi = posi + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:44:27) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = zeros(NPosit, dtype=int)
NPosit = NPosit
while(posi < NPosit):
	if(vet[posi] != 0):
		vet2[posi] = vet[posi]
	elif(vet[posi]== 0):
		posi = posi + 1
		vet2[posi] = vet[posi]
		posi = posi - 1
	posi = posi + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:45:45) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = zeros(NPosit, dtype=int)
NPosit = NPosit
while(posi < NPosit):
	if(vet[posi] != 0):
		vet2[posi] = vet[posi]
	#elif(vet[posi]== 0):
	#	posi = posi + 1
	#	vet2[posi] = vet[posi]
	#	posi = posi - 1
	posi = posi + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:49:43) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = zeros(NPosit, dtype=int)
NPosit = NPosit
while(posi < NPosit):
	if(vet[posi] != 0):
		vet2[posi] = vet[posi]
	posi = posi + 1
print(vet2)
posi = 1 
while(posi < size(vet2)):
	vet[posi] = vet[posi + 1]
	posi = posi + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:50:30) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = zeros(NPosit, dtype=int)
NPosit = NPosit
while(posi < NPosit):
	if(vet[posi] != 0):
		vet2[posi] = vet[posi]
	posi = posi + 1
print(vet2)
posi = 1 
while(posi < size(vet2)):
	vet2[posi] = vet2[posi + 1]
	posi = posi + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:50:41) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = zeros(NPosit, dtype=int)
NPosit = NPosit
while(posi < NPosit):
	if(vet[posi] != 0):
		vet2[posi] = vet[posi]
	posi = posi + 1
print(vet2)
posi = 1 
while(posi < size(vet2)):
	vet2[posi] = vet2[posi + 1]
	posi = posi + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:51:22) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = zeros(NPosit, dtype=int)
NPosit = NPosit
while(posi < NPosit):
	if(vet[posi] != 0):
		vet2[posi] = vet[posi]
	posi = posi + 1
print(vet2)
posi = 1 
while(posi < (size(vet2)-1)):
	vet2[posi] = vet2[posi + 1]
	posi = posi + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:53:45) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = zeros(NPosit, dtype=int)
NPosit = NPosit
posi = 1
while(posi < (size(vet2)-1)):
	vet2[posi] = vet2[posi + 1]
	posi = posi + 1
print(vet2)
#while(posi < NPosit):
#	if(vet[posi] != 0):
#		vet2[posi] = vet[posi]
#	posi = posi + 1
#print(vet2)
#posi = 1 
#while(posi < (size(vet2)-1)):
#	vet2[posi] = vet2[posi + 1]
#	posi = posi + 1
#print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:54:30) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = zeros(NPosit, dtype=int)
NPosit = NPosit
posi = 1
while(posi < (size(vet2)-1)):
	vet2[posi] = vet[posi + 1]
	posi = posi + 1
print(vet2)
#while(posi < NPosit):
#	if(vet[posi] != 0):
#		vet2[posi] = vet[posi]
#	posi = posi + 1
#print(vet2)
#posi = 1 
#while(posi < (size(vet2)-1)):
#	vet2[posi] = vet2[posi + 1]
#	posi = posi + 1
#print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:57:33) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
posi = 0
vet2 = zeros(NPosit, dtype=int)
NPosit = NPosit
posi = 1
while(posi < (size(vet2)-1)):
	vet2[posi] = vet[posi + 1]
	posi = posi + 1
print(vet2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 13:58:22) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(NPosit)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:00:16) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(NPosit)
Nwevet = zeros(NPosit)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:00:46) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(NPosit)
Nwevet = zeros(NPosit)
print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 14:01:22) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(NPosit)
Nwevet = zeros(NPosit)
print(Nwevet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 17:41:51) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(NPosit)
Nwevet = zeros(NPosit)
print(Nwevet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:00:57) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(NPosit)
Nwevet = zeros(NPosit)
print(Nwevet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:01:13) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(NPosit)
Nwevet = zeros(NPosit)
print(Nwevet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:01:25) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(NPosit)
Nwevet = zeros(NPosit)
print(Nwevet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:03:09) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	
	posi = posi + 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:06:24) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	
	posi = posi + 1
posi = 0
while(posi < size(vet)):
	if(vet[posi]):
		del(vet[posi])
	posi = posi + 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:11:35) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	
	posi = posi + 1
posi = 0
vet = str(vet)
while(posi < len(vet)):
	if(vet[posi]):
		del(vet[posi])
	posi = posi + 1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:15:44) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	
	posi = posi + 1

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 17:18:46) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	
	posi = posi + 1
rem = 0
vet = vet.remove(rem)
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:11:44) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	
	posi = posi + 1

print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:15:29) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(NPosit)
Nwevet = zeros(NPosit)
print(Nwevet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:16:37) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
Nwevet = zeros(NPosit)
print(Nwevet, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:21:17) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
Newvet = zeros(NPosit)
print(Newvet, dtype=int)
i = 0
while(i < size(Newvet) ):
	if(vet[i] != 0):
		Newvet[i] = vet[i] 
	i = i + 1	
print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:22:07) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
Newvet = zeros(NPosit)
print(Newvet)
i = 0
while(i < size(Newvet) ):
	if(vet[i] != 0):
		Newvet[i] = vet[i] 
	i = i + 1	
print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:22:19) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
Newvet = zeros(NPosit)

i = 0
while(i < size(Newvet) ):
	if(vet[i] != 0):
		Newvet[i] = vet[i] 
	i = i + 1	
print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:24:11) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
Newvet = zeros(NPosit)

i = 0
while(i < size(Newvet) ):
	if(vet[i] = 0):
		i = i + 1
		Newvet[i] = vet[i] 
	i = i + 1	
print(Newvet)
-- ERROR:
File "XXXX", line 18
    if(vet[i] = 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:24:33) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
Newvet = zeros(NPosit)

i = 0
while(i < size(Newvet) ):
	if(vet[i] == 0):
		i = i + 1
		Newvet[i] = vet[i] 
	i = i + 1	
print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:25:35) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
Newvet = zeros(NPosit)

i = 0
while(i < size(Newvet) ):
	if(vet[i] == 0):
		Newvet[i] = vet[i + 1] 
	i = i + 1	
print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:27:48) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
Newvet = zeros(NPosit)

i = 0
while(i < size(Newvet) ):
	if(vet[i] != 0):
		Newvet[i] = vet[i]
	elif(vet == 0):
		Newvet[i] = vet[i +1]
	i = i + 1	
print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:28:19) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(vet)
Newvet = zeros(NPosit)

i = 0
while(i < size(Newvet) ):
	if(vet[i] != 0):
		Newvet[i] = vet[i]
	elif(vet[i] == 0):
		Newvet[i] = vet[i +1]
	i = i + 1	
print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:30:27) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1
print(str(vet))

Newvet = zeros(NPosit)
#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:32:28) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	

vet = str(vet)
print(vet)

Newvet = zeros(NPosit)
#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:44:55) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	
i = 0
vet = str(vet)

print(vet)
vet1 = ones(NPosit)



#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:47:09) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	
i = 0
vet = str(vet)

print(vet)
vet1 = ones(NPosit)
print(vet1)


#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:49:16) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	

vet1 = ones(NPosit)
i = 0
print(vet1)


#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:52:31) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	

vet1 = ones(NPosit)
i = 0
while(i < size(vet1)):
	if(vet[i] != 0):
		vet1[i] = vet1[i] * vet[i]
print(vet1)


#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:55:42) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	

vet1 = ones(NPosit)
i = 0
while(i < size(vet1)):
	if(vet[i] != 0):
		vet1[i] = vet1[i] * vet[i]
	i = i + 1
print(vet1)


#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:57:36) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	

vet1 = ones(NPosit)
i = -1
while(i < size(vet1)):
	if(vet[i] != 0):
		vet1[i] = vet1[i] * vet[i]
	i = i - 1
print(vet1)


#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:58:10) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	

vet1 = ones(NPosit)
i = -1
while(i < size(vet1)):
	if(vet[i] != 0):
		vet1[i] = vet1[i] * vet[i]
	i = i - 1
print(int(vet1))


#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:59:18) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	

vet1 = ones(NPosit)
i = -1
while(i > -size(vet1)):
	if(vet[i] != 0):
		vet1[i] = vet1[i] * vet[i]
	i = i - 1
print(int(vet1))


#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:59:18) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	

vet1 = ones(NPosit)
i = -1
while(i > -size(vet1)):
	if(vet[i] != 0):
		vet1[i] = vet1[i] * vet[i]
	i = i - 1
print(int(vet1))


#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 18:59:31) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	

vet1 = ones(NPosit)
i = -1
while(i > -size(vet1)):
	if(vet[i] != 0):
		vet1[i] = vet1[i] * vet[i]
	i = i - 1
print(int(vet1))


#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 20:47:37) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] < 0):
		vet[posi] = vet[posi] +(vet[posi] * (-1))
	else:
		vet[posi] = vet[posi]
		NPosit = NPosit + 1
	posi = posi + 1	

vet1 = ones(NPosit)
i = -1
while(i > -size(vet1)):
	if(vet[i] != 0):
		vet1[i] = vet1[i] * vet[i]
	i = i - 1
print(int(vet1))


#i = 0
#while(i < size(Newvet) ):
#	if(vet[i] != 0):
#		Newvet[i] = vet[i]
#	elif(vet[i] == 0):
#		Newvet[i] = vet[i +1]
#	i = i + 1	
#print(Newvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:10:08) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] >= 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = ones(NPosit)
print(nvet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:20:21) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] >= 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = ones(NPosit)
i = 0
i2 = 0
while(i2 < size(nvet)):
	if(vet[i] >= 0):
		nvet[i2] = vet[i]
	i = i + 1
	i2 = i2 + 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:21:32) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] >= 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = ones(NPosit)
i = 0
i2 = 0
while(i2 < size(nvet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
	i = i + 1
	i2 = i2 + 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:21:43) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = ones(NPosit)
i = 0
i2 = 0
while(i2 < size(nvet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
	i = i + 1
	i2 = i2 + 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:22:32) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = ones(NPosit)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
	i = i + 1
	i2 = i2 + 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:23:09) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = ones(NPosit)
i = 0
i2 = 0
while(i < size(nvet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
	i = i + 1
	i2 = i2 + 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:23:37) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeroz(NPosit)
i = 0
i2 = 0
while(i < size(nvet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
	i = i + 1
	i2 = i2 + 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:24:21) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit)
i = 0
i2 = 0
while(i < size(nvet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
	i = i + 1
	i2 = i2 + 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:26:47) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit)
i = 0
i2 = 0
while(i < size(nvet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i = i + 1
	i2 = i2 + 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:27:37) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit)
i = 0
i2 = 0
while(i < size(nvet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
	i = i + 1
		i2 = i2 + 1
print(nvet)
		
		
-- ERROR:
File "XXXX", line 17
    i2 = i2 + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:28:14) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit)
i = 0
i2 = 0
while(i < size(nvet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:30:26) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:30:52) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
		
		
-- EXECUTION TIME:
0.595594
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1.]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2. 3. 5.]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18. 32. 14. 25.]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:31:12) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(int(nvet))
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:32:36) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:34:26) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-24 21:34:44) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import* 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-24 21:35:07) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
posi = 0
tamanho = size(vet)
NPosit = 0
while(posi < tamanho):
	if(vet[posi] > 0):
		NPosit =  NPosit + 1
	posi = posi + 1
nvet = zeros(NPosit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		nvet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(nvet)
		
		
-- EXECUTION TIME:
0.579069
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:13:06) 
-- CODE:
from numpy import* 
vet = array(eval(input("vet:")))
i = 0
tamanho = size(vet)
Numeros_Posit = 0
while(i < tamanho):
	if(vet[i] > 0):
		Numeros_Posit =  Numeros_Posit + 1
	i = i + 1
novo_vet = zeros(Numeros_Posit, dtype=int)
i = 0
i2 = 0
while(i < size(vet)):
	if(vet[i] > 0):
		novo_vet[i2] = vet[i]
		i2 = i2 + 1
	i = i+ 1
print(novo_vet)
		
		
-- EXECUTION TIME:
0.431816
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
